--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
         console.log("WASM Loaded");
       });
     </script>
+    <p>
+      W A S D for movement - C V for zoom out/in - M to toggle multisampling
+    </p>
   </body>
   <style>
     body {
       overflow: hidden;
+    }
+    p {
+      position: absolute;
+      top: 40px;
+      left: 40px;
+      color: white;
+      font-size: 24px;
+      text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     }
     * {
       margin: 0%;
