--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </script>
     <p>
       W A S D for movement - C V for zoom out/in - M to toggle multisampling
+      (laggy)
     </p>
   </body>
   <style>
