--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       });
     </script>
     <p>
-      W A S D for movement - C V for zoom out/in - M to toggle multisampling
-      (laggy)
+      (W A S D) for movement <br />
+      (Left Shift/Space Bar) for zoom in/out <br />
+      (C) to change colors <br />
+      (M) to toggle multisampling (laggy)
     </p>
   </body>
   <style>
