--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </script>
     <p>
       (W A S D) for movement <br />
-      (Left Shift/Space Bar) for zoom in/out <br />
+      (Arrow Keys) for zoom in/out <br />
       (C) to change colors <br />
       (M) to toggle multisampling (laggy)
     </p>
