iteration control, one more color options

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
       });
     </script>
     <p>
-      (W A S D) for movement <br />
-      (Arrow Keys) for zoom in/out <br />
-      (C) to change colors <br />
-      (M) to toggle multisampling (laggy)
+      (W A S D) movement <br />
+      (Up/Down Arrows) zoom in/out <br />
+      (Left/Right Arrows) change iterations <br />
+      (R) reset position <br />
+      (C) change colors <br />
+      (M) toggle multisampling (laggy)
     </p>
   </body>
   <style>
