--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learn WGPU</title>
+    <title>Web Mandelbrot</title>
+    <link rel="icon" data-trunk href="/favicon_van_gogh.png" />
   </head>
 
-  <body id="wasm-example">
+  <body id="web-mandelbrot">
     <script type="module">
       import init from "./pkg/web_mandelbrot.js";
       init().then(() => {
