--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Mandelbrot</title>
-    <link rel="icon" data-trunk href="/favicon_van_gogh.png" />
+    <link rel="icon" data-trunk href="./res/favicon_van_gogh.png" />
   </head>
 
   <body id="web-mandelbrot">
